# hra-3d-cell-generation-api

./: .gitignore  Dockerfile  README.md  backup_cell_generation_api.py  cell_generation_api.py  client.py  package-lock.json  package.json  requirements.txt  run.sh  server.js
.github/workflows/: production-api-build.yml
examples/: test-request-output.csv  test-request.json
meshlab/: VH_M_diaphragmatic_surface.off  VH_M_gastric_impression_of_liver.off  VH_M_renal_column_L.off  client.py
model/all_preprocessed_off_models/https___cdn.humanatlas.io_digital-objects_ref-organ_blood-vasculature-female_v1.3_assets_3d-vh-f-blood-vasculature/: VH_F_anterior_cardiac_vein.off  VH_F_anterior_segmental_right_hepatic_artery.off  VH_F_aortic_arch.off  VH_F_ascending_aorta.off  VH_F_brachiocephalic_artery_a.off  VH_F_brachiocephalic_artery_b.off  VH_F_celiac_trunk.off  VH_F_central_retinal_artery_L.off  VH_F_central_retinal_artery_R.off  VH_F_central_retinal_vein_L.off  VH_F_central_retinal_vein_R.off  VH_F_common_hepatic_artery.off  VH_F_coronary_sinus.off  VH_F_cystic_artery.off  VH_F_cystic_vein.off  VH_F_descending_aorta_a.off  VH_F_descending_aorta_b.off  VH_F_great_cardiac_vein.off  VH_F_hepatic_portal_vein.off  VH_F_ileocolic_artery.off  VH_F_ileocolic_vein.off  VH_F_inferior_mesenteric_artery.off  VH_F_inferior_mesenteric_vein.off  VH_F_inferior_ophthalmic_vein_L.off  VH_F_inferior_ophthalmic_vein_R.off  (+82 more)
server/: CMakeLists.txt  DockerFile  cell_generation.cpp  generate_cell_ctpop.cpp
server/include/: cell_generation.h
src/: CMakeLists.txt  generate_cell_ctpop.cpp
(+1432 files in other folders)
